--- a/PortfolioSite/private/conf/application.ini
+++ b/PortfolioSite/private/conf/application.ini
@@ -3,5 +3,5 @@
 CHARACTER_CONVERSION = 'http://localhost:8080/CharacterConversion';
 PORT_FOLIO_SITE = 'http://localhost:8080/PortfolioSite';
 COPY_FOLDER_TOOL = 'http://localhost:8080/CopyFoderTool';
-FIVARID_MAP = 'http://localhost:8080/FivaridMap';
+FAVORITE_MAP = 'http://localhost:8080/FavoriteMap';
 
